updated htmls for all for pages that added new ids and sample hard code to render gif on last page and sample info on last page

--- a/finalpage.html
+++ b/finalpage.html
@@ -10,8 +10,14 @@
 </head>
 <body>
 <div class="container">
-    <div id="joke">
-            <div id="happyGif">happy</div>
+    <div id="totalmoodboost">
+            <img id="gif">
+
+
+
+            <div id="joke"></div>
+
+            <div id="music"></div>
     </div>
 </div>
 </body>
