--- a/moods.html
+++ b/moods.html
@@ -19,8 +19,8 @@
         <p>Choose your current Mood</p>
         <div class="row">
             <div class="col-lg-4">
-                <!-- onclick="location.href = 'themes.html';"  -->
-                <div id="happy" class="card rainbow-box">
+                
+                <div id="happy" class="card rainbow-box mood">
                    <div class="card-body">
                        <img class="gif-style" src="images\happy.gif">
                    </div> 
@@ -28,7 +28,7 @@
                 <p>Happy</p>
             </div>
             <div class="col-lg-4">
-                    <div onclick="location.href = 'themes.html';" id="sad" class="card rainbow-box">
+                    <div id="sad" class="card rainbow-box mood">
                             <div class="card-body">
                           <img class="gif-style"src="images\sad.gif">
                        </div> 
@@ -36,7 +36,7 @@
                     <p>Sad</p>  
                 </div> 
                 <div class="col-lg-4">
-                        <div  onclick="location.href = 'themes.html';" id="worried" class="card rainbow-box">
+                        <div id="worried" class="card rainbow-box mood">
                            <div class="card-body">
                                 <img class="gif-style" src="images\worried.gif"> 
                            </div>
@@ -47,7 +47,7 @@
         </div> 
         <div class="row">
                 <div class="col-lg-4">
-                    <div onclick="location.href = 'themes.html';" id="surprised" class="card rainbow-box">
+                    <div id="surprised" class="card rainbow-box mood">
                        <div class="card-body">
                            <img class="gif-style" src="images\surprised.gif">
                        </div> 
@@ -55,7 +55,7 @@
                     <p>Surprised</p> 
                 </div>
                 <div class="col-lg-4">
-                        <div onclick="location.href = 'themes.html';" id="annoyed" class="card rainbow-box">
+                        <div id="annoyed" class="card rainbow-box mood">
                            <div class="card-body">
                                <img class="gif-style" src="images\annoyed.gif">
                            </div> 
@@ -63,7 +63,7 @@
                         <p>Annoyed</p> 
                     </div> 
                     <div class="col-lg-4">
-                            <div onclick="location.href = 'themes.html';" id="mad" class="card rainbow-box">
+                            <div id="mad" class="card rainbow-box mood">
                                <div class="card-body">
                                    <img class="gif-style" src="images\mad.gif">
                                </div> 
