--- a/themes.html
+++ b/themes.html
@@ -20,7 +20,7 @@
         <p>Choose a Theme</p>
         <div class="row">
             <div class="col-lg-4">
-                <div onclick="location.href = 'music.html';"class="card rainbow-box">
+                <div class="card rainbow-box theme">
                    <div class="card-body">
                        <img class="theme-style" src="images\animals.gif">
                    </div> 
@@ -28,7 +28,7 @@
                 <p>Animals</p>
             </div>
             <div class="col-lg-4">
-                    <div onclick="location.href = 'music.html';" class="card rainbow-box">
+                    <div class="card rainbow-box theme">
                             <div class="card-body">
                           <img class="theme-style"src="images\movies.gif">
                        </div> 
@@ -36,7 +36,7 @@
                     <p>Movies</p>  
                 </div> 
                 <div class="col-lg-4">
-                        <div onclick="location.href = 'music.html';" class="card rainbow-box">
+                        <div class="card rainbow-box theme">
                            <div class="card-body">
                                 <img class="theme-style" src="images\meme.gif"> 
                            </div>
@@ -47,7 +47,7 @@
         </div> 
         <div class="row">
                 <div class="col-lg-4">
-                    <div onclick="location.href = 'music.html';" class="card rainbow-box">
+                    <div class="card rainbow-box theme">
                        <div class="card-body">
                            <img class="theme-style" src="images\cars.gif">
                        </div> 
@@ -55,7 +55,7 @@
                     <p>Cars</p> 
                 </div>
                 <div class="col-lg-4">
-                        <div onclick="location.href = 'music.html';" class="card rainbow-box">
+                        <div  class="card rainbow-box theme">
                            <div class="card-body">
                                <img class="theme-style" src="images\sports.gif">
                            </div> 
@@ -63,7 +63,7 @@
                         <p>Sports</p> 
                     </div> 
                     <div class="col-lg-4">
-                            <div onclick="location.href = 'music.html';" class="card rainbow-box">
+                            <div  class="card rainbow-box theme">
                                <div class="card-body">
                                    <img class="theme-style" src="images\cartoons.gif">
                                </div> 
