updated all html files js file and uploaded more images

--- a/music.html
+++ b/music.html
@@ -25,7 +25,7 @@
         <p>Choose your current Music Jam</p>
         <div class="row">
             <div class="col-lg-4">
-                <div class="card rainbow-box music">
+                <div id="rap-music" class="card rainbow-box music">
                    <div class="card-body">
                        <img class="theme-style" src="images\rap.gif">
                    </div> 
@@ -33,7 +33,7 @@
                 <p>Rap</p>
             </div>
             <div class="col-lg-4">
-                    <div class="card rainbow-box music">
+                    <div id="jazz-music"class="card rainbow-box music">
                             <div class="card-body">
                           <img class="theme-style"src="images\jazz.gif">
                        </div> 
@@ -41,7 +41,7 @@
                     <p>Jazz</p>  
                 </div> 
                 <div class="col-lg-4">
-                        <div " class="card rainbow-box music">
+                        <div id="rock-music" class="card rainbow-box music">
                            <div class="card-body">
                                 <img class="theme-style" src="images\rock.gif"> 
                            </div>
@@ -52,7 +52,7 @@
         </div> 
         <div class="row">
                 <div class="col-lg-4">
-                    <div " class="card rainbow-box music">
+                    <div id="country-music" class="card rainbow-box music">
                        <div class="card-body">
                            <img class="theme-style" src="images\country.gif">
                        </div> 
@@ -60,7 +60,7 @@
                     <p>Country</p> 
                 </div>
                 <div class="col-lg-4">
-                        <div " class="card rainbow-box music">
+                        <div id="r&b-music" class="card rainbow-box music">
                            <div class="card-body">
                                <img class="theme-style" src="images\randb.gif">
                            </div> 
@@ -68,7 +68,7 @@
                         <p>R and B</p> 
                     </div> 
                     <div class="col-lg-4">
-                            <div " class="card rainbow-box music">
+                            <div id="pop" class="card rainbow-box music">
                                <div class="card-body">
                                    <img class="theme-style" src="images\pop.gif">
                                </div> 
