--- a/moods.html
+++ b/moods.html
@@ -12,7 +12,9 @@
 </head>
 <!-- ******************************page 1*********************************************** -->
 <body>
+    
     <div class="container">
+        <div class="bg"></div>
         <nav class="title-text">
             <p><H1>Mood Boost</H1></p>
         </nav>
