pushing final project

--- a/music.html
+++ b/music.html
@@ -7,6 +7,7 @@
     <title>Mood Boost</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/723d8fa4ad.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -20,9 +21,9 @@
         <!-- ***************************************page 3*************************************** -->
     <div class="container">
         <nav class="title-text">
-            <p><H1>Mood Boost</H1></p>
+            <p><H1>Mood Boost®</H1></p>
         </nav>
-        <p>Choose your current Music Jam</p>
+        <p class="choose moodP">Choose your groove to bust a move<i class="far fa-hand-point-down"></i></p>
         <div class="row">
             <div class="col-lg-4">
                 <div id="rap-music" class="card rainbow-box music">
@@ -30,7 +31,7 @@
                        <img class="theme-style" src="images\rap.gif">
                    </div> 
                 </div>  
-                <p>Rap</p>
+                <p class="choices">Rap</p>
             </div>
             <div class="col-lg-4">
                     <div id="jazz-music"class="card rainbow-box music">
@@ -38,7 +39,7 @@
                           <img class="theme-style"src="images\jazz.gif">
                        </div> 
                     </div> 
-                    <p>Jazz</p>  
+                    <p class="choices">Jazz</p>  
                 </div> 
                 <div class="col-lg-4">
                         <div id="rock-music" class="card rainbow-box music">
@@ -46,7 +47,7 @@
                                 <img class="theme-style" src="images\rock.gif"> 
                            </div>
                           </div> 
-                          <p>Rock</p> 
+                          <p class="choices">Rock</p> 
                     </div>  
                                           
         </div> 
@@ -57,7 +58,7 @@
                            <img class="theme-style" src="images\country.gif">
                        </div> 
                     </div> 
-                    <p>Country</p> 
+                    <p class="choices">Country</p> 
                 </div>
                 <div class="col-lg-4">
                         <div id="r&b-music" class="card rainbow-box music">
@@ -65,7 +66,7 @@
                                <img class="theme-style" src="images\randb.gif">
                            </div> 
                         </div> 
-                        <p>R and B</p> 
+                        <p class="choices">R and B</p> 
                     </div> 
                     <div class="col-lg-4">
                             <div id="pop" class="card rainbow-box music">
@@ -73,7 +74,7 @@
                                    <img class="theme-style" src="images\pop.gif">
                                </div> 
                             </div> 
-                            <p>Pop</p> 
+                            <p class="choices">Pop</p> 
                         </div>                       
             </div> 
        
